--- a/requirements.txt
+++ b/requirements.txt
@@ -17,3 +17,6 @@ python-dateutil==2.8.2
 pytz==2022.7.1
 six==1.16.0
 sqlparse==0.4.3
+django-two-factor-auth ==1.14.0   # used for 2FA/OTP (depends on django-phonenumber-field (>=1.1.0,<7))
+django-phonenumber-field == 6.0.0
+phonenumbers==8.13.7
